// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntryFiles should get entry module: (Output File Strategy "members") (Option Group "1") 1`] = `
"**@scope/entryfile** • [Readme](readme_.mdx) \\| API

***

# entry-module

## Index

### Classes

- [ModuleClass](entry-module/classes/ModuleClass.mdx)
"
`;

exports[`EntryFiles should get entry module: (Output File Strategy "members") (Option Group "2") 1`] = `
"**@scope/entryfile** • API

***

# entry-module

## Index

### Classes

- [ModuleClass](entry-module/classes/ModuleClass.mdx)
"
`;

exports[`EntryFiles should get module member for members: (Output File Strategy "members") (Option Group "1") 1`] = `
"**@scope/entryfile** • [Readme](../../readme_.mdx) \\| [API](../../README.mdx)

***

[@scope/entryfile](../../README.mdx) / ModuleClass

# Class: ModuleClass

## Constructors

### new ModuleClass()

> **new ModuleClass**(): [\`ModuleClass\`](ModuleClass.mdx)

#### Returns

[\`ModuleClass\`](ModuleClass.mdx)
"
`;

exports[`EntryFiles should get module member for members: (Output File Strategy "members") (Option Group "2") 1`] = `
"**@scope/entryfile** • API

***

[@scope/entryfile](../../index.mdx) / ModuleClass

# Class: ModuleClass

## Constructors

### new ModuleClass()

> **new ModuleClass**(): [\`ModuleClass\`](ModuleClass.mdx)

#### Returns

[\`ModuleClass\`](ModuleClass.mdx)
"
`;

exports[`EntryFiles should get readme file: (Output File Strategy "members") (Option Group "1") 1`] = `
"**@scope/entryfile** • Readme \\| [API](README.mdx)

***

[@scope/entryfile](README.mdx) / @scope/entryfile

# MY README

> Some block quote

Some text.

## Readme heading

Some text.
"
`;
